# memory_game

./: .gitmodules  CMakeLists.txt  README.md
res/: font_gen.py  times24.png.h
src/: game.c  game.h  main.c
